@@ -2,12 +2,14 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: ChangeLog,v 1.29 2004/12/16 14:52:16 port001 Exp $
+# $Id: ChangeLog,v 1.30 2004/12/16 15:43:31 port001 Exp $
 
 16 Dec 2004; Ian Leitch <port001@gentoo.org>:
  * Added some experimental SQL abstraction code, maybe not of any use in this
    project, but who knows!
  * Revamped the MySQL module
+ * Converted admin/Page_Statistics to new module format
+   Note: This page will appear broken untill all the modules have been converted 
  * Fixes
 
 15 Dec 2004; Ian Leitch <port001@gentoo.org>:
